Overflow Fixed

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 * {
   font-family: "Poppins", sans-serif;
 }
@@ -55,4 +63,3 @@
   background-color: rgba(0, 0, 0, 0.418);
   opacity: 0.7;
 }
-
